Fix button active; fix style guide alignment

--- a/src/scss/cms.scss
+++ b/src/scss/cms.scss
@@ -23,7 +23,6 @@
 
       &.invert .max-width {
         padding: 0;
-        max-width: #{$max-width - 32px};
       }
 
       &.grid .max-width {
